assets/css/style.css
/*
 Styles
 Author: Anton Valle
*/

a {
	color: #17a2b8;
}

a:hover {
	color: #17a2b8;
}

@media (min-width: 768px) {
	.margin-top-0-mobile {
		margin-top: -100px;
	}
}

#corner-logo>img {
	width: 4em;
}

#corder-thingie {
	height: 75px;
}

#corner-name {
	display: none;
}

.badge-icon {
	min-width: 1em;
	max-width: 1em;
	max-height: 1em;
}

.navbar {
	padding: 0rem 1rem;
	-webkit-box-shadow: 0px 6px 20px 0px rgba(0, 0, 0, 0.0);
	-moz-box-shadow: 0px 6px 20px 0px rgba(0, 0, 0, 0.0);
	box-shadow: 0px 6px 20px 0px rgba(0, 0, 0, 0.0);
	-webkit-transition: all 0.1s ease-in-out;
	border-bottom: 0px solid #17a2b847;
}

.navbar>.container {
	min-height: 106px;
}

.navbar-shadow {
	-webkit-box-shadow: 0px 6px 20px 0px rgba(0, 0, 0, 0.15);
	-moz-box-shadow: 0px 6px 20px 0px rgba(0, 0, 0, 0.15);
	box-shadow: 0px 6px 20px 0px rgba(0, 0, 0, 0.15);
	-webkit-transition: all 0.2s ease-in-out;
	border-bottom: 1px solid #17a2b847;
}

.round-image {
	border-radius: 50%;
	border: white solid 5px;
}

.top-portrait {
	width: 150px;
	height: 150px;
}

.chat-image {
	width: 90px;
	height: 90px;
	background-color: #fff;
}

@media (max-width: 576px) {
	.chat-image {
		width: 50px;
		height: 50px;
		background-color: #fff;
	}
}

#header {
	opacity: 0.9;
	height: 106px;
}

#header-blur {
	overflow: hidden;
	z-index: 1;
	filter: blur(4px);
	height: 106px;
	position: fixed;
	top: 0;
}

.inner-top-shadow {
	-webkit-box-shadow: inset 0px 10px 10px 0px rgba(0, 0, 0, 0.12);
	-moz-box-shadow: inset 0px 10px 10px 0px rgba(0, 0, 0, 0.12);
	box-shadow: inset 0px 10px 10px 0px rgba(0, 0, 0, 0.12);
}

#canvas {
	margin-top: 106px;
}

#name-face {
	margin-top: -106px;
	height: 500px;
	background-size: cover;
	background-image: linear-gradient(rgba(255, 255, 255, 0.85), rgba(255, 255, 255)), url('../img/anton_paja.jpg');
}

#name-face>.container {
	padding-top: 106px;
}

.speech-bubble {
	position: relative;
	border-radius: .4em;
	margin: 1em;
	padding: 1em;
	max-width: 20em;
	-webkit-box-shadow: 6px 6px 20px 0px rgba(0, 0, 0, 0.15);
	-moz-box-shadow: 6px 6px 20px 0px rgba(0, 0, 0, 0.15);
	box-shadow: 6px 6px 20px 0px rgba(0, 0, 0, 0.15);
}

.speech-bubble-anton {
	background: #17a2b8;
}

.speech-bubble-visitor {
	background: #17a2b8;
}

.speech-bubble:after {
	content: '';
	position: absolute;
	top: 50%;
	width: 0;
	height: 0;
	border: 0.625em solid transparent;
	border-bottom: 0;
	margin-top: -0.312em;
}

.speech-bubble-anton:after {
	left: 0;
	border-right-color: #17a2b8;
	border-left: 0;
	margin-left: -0.625em;
}

.speech-bubble-visitor:after {
	right: 0;
	border-left-color: #00aabb;
	border-right: 0;
	margin-right: -0.625em;
}

.testimonials-bg {
	background-size: cover;
	background-image: linear-gradient(rgba(23, 162, 184, 0.95), rgba(23, 162, 184, 0.95)), url('../img/anton_recording.jpg');
}

.parallax {
	background-attachment: fixed;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
}

.language-toggle {
	margin-left: 8px;
}

@media (max-width: 991px) {
	.language-toggle {
		margin-top: 8px;
		margin-left: 0;
	}
}

@media print {
	section>div>.py-5 {
		padding-bottom: 0 !important;
	}

	section>div>div>div>div>ul>li.py-3 {
		padding-bottom: 0 !important;
	}

	section>div>div>div>div>ul>li.my-3 {
		margin-bottom: 0 !important;
	}

	section>div>div>div>div>ul>li.bg-light {
		background-color: #fff !important;
	}

	.page-break {
		page-break-before: always;
	}

	.btn-info {
		border-color: #555;
	}

	.btn-info,
	.text-info {
		color: #000 !important;
	}

	a {
		color: #000;
		text-decoration: none !important;
	}

	.appear-on-scroll {
		margin-top: 0px !important;
		opacity: 1 !important;
	}

	#testimonials,
	ul>li>p:nth-of-type(2),
	ul>li>p:nth-of-type(3) {
		font-size: 80%;
		font-weight: 400;
	}

	.no-print,
	.no-print * {
		display: none !important;
	}

	.on-print,
	.on-print * {
		display: block !important;
	}
}

